--- a/frontend/src/components/Featured/Featured.module.css
+++ b/frontend/src/components/Featured/Featured.module.css
@@ -7,6 +7,9 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    padding: 10px 20px;
+    border: 2px solid black;
+    border-radius: 10px;
 }
 
 .article {
