--- a/frontend/src/views/Home.module.css
+++ b/frontend/src/views/Home.module.css
@@ -9,7 +9,11 @@
     align-items: center;
     gap: 40px;
     font-family: "Newsreader";
-    margin: 20px;
+    padding: 20px;
+    background-color: teal;
+    color: whitesmoke;
+    height: 10vh;
+    width: 100vw;
 }
 
 #logo {
@@ -17,10 +21,15 @@
     width: 6rem;
 }
 
-.title, .quote {
+.title, .info {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-shadow: 1px 1px 1px black;
+}
+
+.title > h1 {
+    margin-bottom: -10px;
 }
 
 .content {
