--- a/frontend/src/components/Featured/Featured.module.css
+++ b/frontend/src/components/Featured/Featured.module.css
@@ -8,8 +8,6 @@
     flex-direction: column;
     gap: 5px;
     padding: 10px 20px;
-    border: 2px solid black;
-    border-radius: 10px;
 }
 
 .article {
@@ -17,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 42vw;
+    width: 90%;
     gap: 10px;
     padding: 3px 5px;
 }
