--- a/frontend/src/views/Dashboard.module.css
+++ b/frontend/src/views/Dashboard.module.css
@@ -4,5 +4,21 @@
 }
 
 .content {
-    padding-top: 20vh;
+    padding: 20vh 5vw;
+    display: flex;
+    gap: 40px;
+}
+
+.interests {
+    flex: 1;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 0px 10px;
+}
+
+.digest {
+    flex: 4;
+    border: 2px solid black;
+    border-radius: 10px;
+    padding: 0px 10px;
 }
