--- a/frontend/src/views/Dashboard.module.css
+++ b/frontend/src/views/Dashboard.module.css
@@ -14,6 +14,8 @@
     border: 2px solid black;
     border-radius: 10px;
     padding: 0px 10px;
+    overflow-y: scroll;
+    max-height: 75vh;
 }
 
 .digest {
@@ -21,4 +23,6 @@
     border: 2px solid black;
     border-radius: 10px;
     padding: 0px 10px;
+    overflow-y: scroll;
+    max-height: 75vh;
 }
